--- a/src/main/resources/templates/sbu/attachments/panel.html
+++ b/src/main/resources/templates/sbu/attachments/panel.html
@@ -17,6 +17,11 @@
         data-bs-target="#pills-file-edit" type="button"
         role="tab">[[${#messages.msgOrNull('sbu.attachment.edit') ?: 'Edit'}]]</button>
     </li>
+    <li th:if="${user == null || user.canRead(item)}" class="nav-item" role="presentation">
+      <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
+        data-bs-target="#pills-file-note" type="button"
+        role="tab">[[${#messages.msgOrNull('sbu.attachment.note') ?: 'Note'}]]</button>
+    </li>
     <li th:if="${user == null || user.canUpdate(item)}" class="nav-item" role="presentation">
       <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
         data-bs-target="#pills-file-upload" type="button"
@@ -62,6 +67,18 @@
 
         <script th:inline="javascript" defer>
           htmx.process(document.getElementById('attachmentEdit'));
+        </script>
+      </div>
+    </div>
+
+    <div th:if="${user == null ||  user.canRead(item)}" class="tab-pane fade" id="pills-file-note"
+      role="tabpanel">
+      <div id="attachmentNote">
+        <a hx:get="@{${item.joinPath('attachments', 'note')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${ajaxTargetId})}"
+          hx-target="#attachmentNote" hx-ext="json-enc" hx-trigger="revealed" class="d-none"></a>
+
+        <script th:inline="javascript" defer>
+          htmx.process(document.getElementById('attachmentNote'));
         </script>
       </div>
     </div>
